exports[`BpkGridRow should render correctly 1`] = `
<div
  className="bpk-grid__row bpk-grid__row--padded">
  Contents
</div>
`;

exports[`BpkGridRow should render correctly with "className" attribute 1`] = `
<div
  className="bpk-grid__row bpk-grid__row--padded my-custom-class">
  Contents
</div>
`;

exports[`BpkGridRow should render correctly with "debug" attribute 1`] = `
<div
  className="bpk-grid__row bpk-grid__row--padded"
  debug={true}>
  Contents
</div>
`;

exports[`BpkGridRow should render correctly with arbitrary attributes 1`] = `
<div
  className="bpk-grid__row bpk-grid__row--padded"
  data-arbitrary-1="my-arbitrary-data"
  data-arbitrary-2="my-arbitrary-data">
  Contents
</div>
`;
